# python-project-lvl1

./: Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: flake8-lint.yml  linter-check.yml  python-package.yml
brain_games/: __init__.py  cli.py
brain_games/scripts/: brain_games.py
