[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["Sergey Titov <ya.sergeTitov@yandex.ru>"]
license = "Creative Commons Attribution"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
